force-app/main/default/objects/ABSLIG_Case_Detail__c/ABSLIG_Case_Detail__c.object-meta.xml
<CustomObject>
    <description>This is extension object specific for ABSLIG Business Unit.</description>
    <label>ABSLIG Case Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ABSLIG</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABSLIG Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>