force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Checker_Comment__c.field-meta.xml
<CustomField>
    <fullName>Checker_Comment__c</fullName>
    <label>Checker Comment</label>
    <type>TextArea</type>
</CustomField>