force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Checker_Manager__c.field-meta.xml
<CustomField>
    <fullName>Checker_Manager__c</fullName>
    <label>Checker Manager</label>
    <fullName>CTST_Query_Fields__c</fullName>
    <label>CTST Query Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>