force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Checker_Name__c.field-meta.xml
<CustomField>
    <fullName>Checker_Name__c</fullName>
    <label>Checker Name</label>
    <type>TextArea</type>
</CustomField>