force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inter Departmental Delay</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Procedural Delay</fullName>
            </value>
            <value>
                <fullName>External Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>