force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Docs_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Received_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Docs Received Date</label>
    <type>DateTime</type>
</CustomField>