force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Financial_Non_Financial__c.field-meta.xml
<CustomField>
    <fullName>Financial_Non_Financial__c</fullName>
    <label>Financial/Non-Financial</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Non-Financial</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>