force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Maker_Comment__c.field-meta.xml
<CustomField>
    <fullName>Maker_Comment__c</fullName>
    <label>Maker Comment</label>
    <type>TextArea</type>
</CustomField>