force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Maker_Manager__c.field-meta.xml
<CustomField>
    <fullName>Maker_Manager__c</fullName>
    <label>Maker Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>