force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Maker_Name__c.field-meta.xml
<CustomField>
    <fullName>Maker_Name__c</fullName>
    <label>Maker Name</label>
    <type>TextArea</type>
</CustomField>