force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>Policy_ID__c</fullName>
    <label>Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>