force-app/main/default/objects/ABSLIG_Case_Detail__c/fields/Requirement_Met_Date__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Met_Date__c</fullName>
    <label>Requirement Met Date</label>
    <type>Date</type>
</CustomField>